src/test/ui/break-diverging-value.stderr
error[E0308]: mismatched types
  --> $DIR/break-diverging-value.rs:9:26
   |
LL | fn loop_break_break() -> i32 {
   |    ----------------      ^^^ expected `i32`, found `()`
   |    |
   |    implicitly returns `()` as its body has no tail or `return` expression

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
